--- a/manifest.json
+++ b/manifest.json
@@ -7,15 +7,15 @@
       "chipFamily": "ESP32",
       "parts": [
         {
-          "path": "bootloader.bin",
+          "path": "./firmware/bootloader.bin",
           "offset": 4096
         },
         {
-          "path": "partitions.bin",
+          "path": "./firmware/partitions.bin",
           "offset": 32768
         },
         {
-          "path": "firmware.bin",
+          "path": "./firmware/firmware.bin",
           "offset": 65536
         }
       ]
